--- a/index.html
+++ b/index.html
@@ -10,12 +10,26 @@
 
 		</head>
 		<body onresize="ajustarTamanhoPalcoJogo()">
-			
-		
+
+			<div class="painel">
+				
+				<div class="vidas">
+					<img src="imagens/coracao_vazio.png" />
+					<img src="imagens/coracao_cheio.png" />
+					<img src="imagens/coracao_cheio.png" />
+				</div>
+
+				<div class="cronometro">
+					
+				</div>
+
+			</div>
 			
 		
 			<script>
-				posicaoRandomica()
+				setInterval(function() {
+					posicaoRandomica()
+					}, 1000)
 			</script>
 		</body>
 	</html>
