--- a/index.html
+++ b/index.html
@@ -20,14 +20,17 @@
 				</div>
 
 				<div class="cronometro">
-					
+					Tempo restenate: <span id="cronometro"></span>
 				</div>
 
 			</div>
 			
 		
 			<script>
-				setInterval(function() {
+
+				document.getElementById('cronometro').innerHTML = tempo
+
+				var criaMosquito = setInterval(function() {
 					posicaoRandomica()
 					}, 2000)
 			</script>
