--- a/fim_de_jogo.html
+++ b/fim_de_jogo.html
@@ -26,7 +26,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="d-flex justify-content-center">
-							<button type="button" class="btn btn-dark btn-lg" onclick="window.location.href = 'index.html' ">Reiniciar</button>
+							<button type="button" class="btn btn-dark btn-lg" onclick="window.location.href = 'iniciar_jogo.html' ">Reiniciar</button>
 						</div>
 					</div>
 				</div>
