--- a/index.html
+++ b/index.html
@@ -5,34 +5,62 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<title>JavaScript</title>
 
+			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
 			<link rel="stylesheet" type="text/css" href="estilo.css">
-			<script src="jogo.js"></script>
 
-		</head>
-		<body onresize="ajustarTamanhoPalcoJogo()">
-
-			<div class="painel">
+			<script>
 				
-				<div class="vidas">
-					<img id="v1" src="imagens/coracao_cheio.png" />
-					<img id="v2" src="imagens/coracao_cheio.png" />
-					<img id="v3" src="imagens/coracao_cheio.png" />
+
+				function iniciarJogo() {
+					var nivel = document.getElementById('nivel').value
+
+					if(nivel === '') {
+						alert('Selecione um nível para iniciar o jogo')
+						return false
+					}
+
+					window.location.href = "index.html?" + nivel
+				}
+
+			</script>
+		</head>
+		<body>
+
+			<div class="container">
+
+				<div class="row">
+					<div class="col">
+						<div class="d-flex justify-content-center">
+							<img src="imagens/game.png">
+						</div>
+					</div>
 				</div>
 
-				<div class="cronometro">
-					Tempo restenate: <span id="cronometro"></span>
+				<div class="row">
+					<div class="col">
+						<div class="d-flex justify-content-center">
+							<div class="mb-2">
+								<select class="form-control" id="nivel">
+									<option value="">-- Selecionar o Nível--</option>
+									<option value="normal">Normal</option>
+									<option value="dificil">Difícil</option>
+									<option value="chucknorris">Chuck Norris</option>
+								</select>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col">
+						<div class="d-flex justify-content-center">
+							<button type="button" class="btn btn-danger btn-lg" onclick="iniciarJogo()">Iniciar Jogo</button>
+						</div>
+					</div>
 				</div>
 
 			</div>
-			
-		
-			<script>
 
-				document.getElementById('cronometro').innerHTML = tempo
-
-				var criaMosquito = setInterval(function() {
-					posicaoRandomica()
-					}, criaMosquitoTempo)
-			</script>
 		</body>
 	</html>
