--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						return false
 					}
 
-					window.location.href = "index.html?" + nivel
+					window.location.href = "app.html?" + nivel
 				}
 
 			</script>
